default/objects/success__Team_Member__c/success__Team_Member__c.object-meta.xml
<CustomObject>
    <description>The members of a Collective (Competition, Experience Group or Template). Details of the members role, score, level and rank position within the Collective are all stored on the Members record.</description>
    <label>Member</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>