default/objects/success__Team_Member__c/fields/success__Average_Score__c.field-meta.xml
<CustomField>
    <fullName>success__Average_Score__c</fullName>
    <formula>If( success__Team__r.RecordType.DeveloperName = &#39;Targeted&#39;,
      If( OR(ISBLANK(success__Team__r.success__Start_Date_Time__c),success__Team__r.success__Start_Date_Time__c &gt; NOW()),null,
           if( success__Team__r.success__End_Date_Time__c &gt; NOW(),  success__Score__c / (NOW() - success__Team__r.success__Start_Date_Time__c), success__Score__c / ( success__Team__r.success__End_Date_Time__c -  success__Team__r.success__Start_Date_Time__c ))),null)</formula>
    <label>Daily Avg. Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>