default/objects/success__Team_Member__c/fields/success__Competition_Status__c.field-meta.xml
<CustomField>
    <fullName>success__Competition_Status__c</fullName>
    <formula>success__Team__r.success__State_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>