default/objects/success__Team_Member__c/fields/success__Current_Level__c.field-meta.xml
<CustomField>
    <fullName>success__Current_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level</label>
    <referenceTo>success__Team_Level__c</referenceTo>
    <relationshipLabel>Competitors</relationshipLabel>
    <relationshipName>Team_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>