default/objects/success__Team_Member__c/fields/success__Finishing_Position__c.field-meta.xml
<CustomField>
    <fullName>success__Finishing_Position__c</fullName>
    <label>Finishing Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>