default/objects/success__Team_Member__c/fields/success__Grouping__c.field-meta.xml
<CustomField>
    <fullName>success__Grouping__c</fullName>
    <inlineHelpText>Can be used to subdivide a Collective for reporting and Insight</inlineHelpText>
    <label>Grouping</label>
    <length>80</length>
    <type>Text</type>
</CustomField>