default/objects/success__Team_Member__c/fields/success__Identifier__c.field-meta.xml
<CustomField>
    <fullName>success__Identifier__c</fullName>
    <formula>CASESAFEID(success__Team__c) + &quot;-&quot; + CASESAFEID(success__User__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identifier</label>
    <type>Text</type>
</CustomField>