default/objects/success__Team_Member__c/fields/success__Last_Percentile__c.field-meta.xml
<CustomField>
    <fullName>success__Last_Percentile__c</fullName>
    <label>Last Percentile</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>