default/objects/success__Team_Member__c/fields/success__Last_Rank__c.field-meta.xml
<CustomField>
    <fullName>success__Last_Rank__c</fullName>
    <label>Last Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>