default/objects/success__Team_Member__c/fields/success__Last_Rank_As_Of__c.field-meta.xml
<CustomField>
    <fullName>success__Last_Rank_As_Of__c</fullName>
    <label>Last Rank As Of</label>
    <type>DateTime</type>
</CustomField>