default/objects/success__Team_Member__c/fields/success__Last_Score__c.field-meta.xml
<CustomField>
    <fullName>success__Last_Score__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>