default/objects/success__Team_Member__c/fields/success__Result_Status__c.field-meta.xml
<CustomField>
    <fullName>success__Result_Status__c</fullName>
    <label>Result Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>