default/objects/success__Team_Member__c/fields/success__Role_Name__c.field-meta.xml
<CustomField>
    <fullName>success__Role_Name__c</fullName>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Participant</fullName>
            </value>
            <value>
                <fullName>Spectator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>