default/objects/success__Team_Member__c/fields/success__Score__c.field-meta.xml
<CustomField>
    <fullName>success__Score__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Points gained within the Competition</inlineHelpText>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>