default/objects/success__Team_Member__c/fields/success__Team__c.field-meta.xml
<CustomField>
    <fullName>success__Team__c</fullName>
    <label>Collective</label>
    <referenceTo>success__Team__c</referenceTo>
    <relationshipLabel>Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>